# diffprompt

./: .gitignore  API_REFERENCE.md  CONTRIBUTING.md  COOKBOOK.md  README.md  README`1.md  pyproject.toml  report.html  v1.txt  v2.txt
.github/workflows/: ci.yml
diffprompt/: __init__.py  cli.py  ratelimit.py
diffprompt/core/: clusterer.py  embedder.py  generator.py  judge.py  ontology.py  runner.py  scorer.py  slicer.py
diffprompt/models/: __init__.py  cascade.py
diffprompt/output/: exporter.py  insights.py  terminal.py
docs/superpowers/specs/: 2026-06-19-diffprompt-v2-program-design.md
examples/: basic_diff.py  ontology_inspect.py  similarity_playground.py
tests/: test_embedder.py  test_generator.py  test_insights.py  test_judge.py  test_ontology.py  test_ratelimit.py  test_runner.py  test_scorer.py  test_slicer.py
